...
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/eighteen_dp"
                    android:layout_marginEnd="@dimen/eighteen_dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/six_dp"
                        android:layout_marginRight="@dimen/six_dp"
                        android:src="@drawable/ic_back_arrow" />
...
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gridviewRecycMake_"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="@dimen/fourteen_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/fourteen_dp"
...
                                    android:layout_width="wrap_content"
                                    android:layout_height="50dp"
                                    android:layout_marginTop="@dimen/ten_dp"
                                    android:src="@mipmap/car" />

                                <com.walkins.aapkedoorstep.custom.NormalTextView
                                    android:id="@+id/tvmakeName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:textColor="@color/text_color1"
                                    android:textSize="@dimen/twelve_sp"
...
                                android:src="@drawable/ic_selected_vehicle"
                                android:visibility="visible" />
                        </RelativeLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivEditVehicleMake"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="@dimen/twelve_dp"
                        android:layout_marginLeft="@dimen/twelve_dp"
                        android:padding="@dimen/six_dp"
                        android:src="@mipmap/ic_edit_icon" />
...
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="@dimen/eight_dp"
                                android:paddingBottom="@dimen/eight_dp">

                                <CheckBox
                                    android:id="@+id/chkRF"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="-5dp"
                                    android:layout_marginLeft="-5dp"
                                    android:buttonTint="@color/text_color2"
                                    android:paddingStart="@dimen/three_dp"
...
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="@dimen/eight_dp"
                                android:paddingBottom="@dimen/eight_dp">

                                <CheckBox
                                    android:id="@+id/chkLR"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="-5dp"
                                    android:layout_marginLeft="-5dp"

                                    android:buttonTint="@color/text_color2"
...
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="@dimen/eight_dp"
                                android:paddingBottom="@dimen/eight_dp">

                                <CheckBox
                                    android:id="@+id/chkRR"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="-5dp"
                                    android:layout_marginLeft="-5dp"

                                    android:buttonTint="@color/text_color2"
...
